# yse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  package-lock.json  theme.css  幽竹清溪-cdr.xml  科研设计配色-cdr.xml
.github/workflows/: build.yml  build.yml.disabled
.opencode/: .gitignore
.opencode/agents/: developer.md  sdk-developer.md
.opencode/plugins/: tmux-task.ts
.opencode/tools/: bash-test.ts  bash.ts
agent_docs/: 1_计划.md  2_实现记录.md  3_exec测试规范.md  3_exec迁移.md  3_exec问题.md
core/: Cargo.toml
core/src/: app.rs  config.rs  crypto.rs  disguise.rs  event.rs  identity.rs  imap_ingest.rs  lib.rs  logging.rs  message.rs  router.rs
core/src/email/: imap.rs  mod.rs  parser.rs  smtp.rs
core/src/plugin/: mod.rs  process.rs  process_manager.rs  protocol.rs  session.rs
core/src/store/: mod.rs  sqlite.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: commands.rs  lib.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: commands.ts
frontend/src/components/: ChatInput.vue  ChatSettingsPanel.vue  ContactAvatar.vue  ContactListItem.vue  ContactPicker.vue  ContextMenu.vue  ForwardDialog.vue  MessageBubble.vue  PluginComponent.vue  PluginListSelect.vue  PluginProgressBar.vue
frontend/src/composables/: useAvatar.ts  useChatOpen.ts  useIsMobile.ts  useMarkdown.ts  useQrCode.ts
frontend/src/router/: index.ts
frontend/src/stores/: yse.ts
frontend/src/types/: plugin.ts
frontend/src/utils/: address.ts  helpers.ts
frontend/src/views/: ChatView.vue  ConfigView.vue  ContactsView.vue  LogView.vue  MobileSearchView.vue  PluginView.vue  ScanView.vue  SearchView.vue  WelcomeView.vue
mobile/: Cargo.toml  keystore.password  package-lock.json  package.json  tauri.conf.json  yse-keystore.jks
mobile/capabilities/: default.json
mobile/icons/: icon.icns
mobile/src/: commands.rs  lib.rs  main.rs
plugins/: README.md
plugins/echo-bot/: Cargo.toml  plugin.toml
plugins/echo-bot/src/: main.rs
plugins/file-tree/: AGENTS.md  Cargo.toml
plugins/file-tree/src/: main.rs
plugins/opencode-bot/: AGENTS.md  package-lock.json  package.json  smoke-exec.mjs  start.sh  tsconfig.json
plugins/opencode-bot/opencode-tools/: bash-ssh-test.ts  bash.ts  exec-ssh-test.ts  exec-test.ts  exec.ts  shell.ts
plugins/opencode-bot/src/: api.ts  index.ts  logger.ts  model-config.ts  opencode.test.ts  opencode.ts  server.ts  yse.ts
plugins/project-manager/: Cargo.toml  plugin.toml
scripts/: android-build.sh
(+5 files in other folders)
