[package]
name = "yse-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true

argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

imap = "3.0.0-alpha.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.15"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
futures-util = "0.3"
