[package]
name = "yse-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
yse-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
dirs-next = "2.0"
chacha20poly1305 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.4.5"
