[package]
name = "yse-mobile"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
yse-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# 交叉编译时使用 vendored OpenSSL 避免链接系统 OpenSSL
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
